--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,10 @@
     <div id="main"><!--abre div main-->
         <!--Seção inicial-->
         <div id="apresentacao">
-            <p>Olá, me chamo</p>
             <h1>Larissa Regina da Silva</h1>
             <h2>Desenvolvedora Web</h2>
             <div id="foto">
-                <img src="foto.png"
+                <img src="./images/foto.png"
                     alt="Mulher de óculos sorrindo, de cabelos e olhos escuros, pele branca e está em pose de contexto profissional, com ambas as mãos na cintura."
                     title="Foto de perfil de Larissa"> </p>
             </div><!--fecha div foto-->
@@ -49,7 +48,7 @@
             </div><!--fecha div habilidades-->
         </div><!--fecha apresentacao-->
         <hr>
-        <div id="Experiencias">
+        <div id="experiencias">
             <h2>Experiência</h2>
             <h3 class="exp-tipos">Profissional</h3>
             <h4 class="subtitulo-cargo">Analista de Negócios Globais e PMO Jr.</h4>
